# ColorblindShaders

./: CMakeLists--Antigo.txt  CMakeLists.txt  README.md
include/: LUTLoader.h
shaders/: fragment.glsl  fragment_lut.glsl  vertex.glsl
src/: main.cpp  mainComDWMPiscaAoInteragir.cpp  mainComDWMPiscaAoPerderOFoco.cpp  mainDXGINvidiaAbordagem.cpp  mainFlickeringEProcessamentoGPU-CPU-GPU.cpp  mainNãoAplicandoFiltro.cpp  mainResolvidoPorblemaDeNãoAplicarFiltro.cpp  mainSemLoopfeedbackPoremComFlickering.cpp  mainalternativa.cpp  maincopia.cpp  maincopia2.cpp
